// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component FileUploadEmbargoDate should render disabled 1`] = `
<[object Object]
  InputProps={
    Object {
      "classes": Object {
        "root": "",
      },
      "disableUnderline": true,
    }
  }
  autoOk={true}
  disabled={true}
  format="DD/MM/YYYY"
  minDate={2016-01-01T00:00:00.000Z}
  onChange={[Function]}
  value={2016-01-01T00:00:00.000Z}
/>
`;

exports[`Component FileUploadEmbargoDate should render with default setup 1`] = `
<[object Object]
  InputProps={
    Object {
      "classes": Object {
        "root": "",
      },
      "disableUnderline": true,
    }
  }
  autoOk={true}
  format="DD/MM/YYYY"
  minDate={2016-01-01T00:00:00.000Z}
  onChange={[Function]}
  value={2016-01-01T00:00:00.000Z}
/>
`;

exports[`Component FileUploadEmbargoDate should set correct date on date changed 1`] = `
<[object Object]
  InputProps={
    Object {
      "classes": Object {
        "root": "",
      },
      "disableUnderline": true,
    }
  }
  autoOk={true}
  format="DD/MM/YYYY"
  minDate={2016-01-01T00:00:00.000Z}
  onChange={[Function]}
  value={2016-01-01T00:00:00.000Z}
/>
`;

exports[`Component FileUploadEmbargoDate should set correct date on date changed 2`] = `
<[object Object]
  InputProps={
    Object {
      "classes": Object {
        "root": "",
      },
      "disableUnderline": true,
    }
  }
  autoOk={true}
  format="DD/MM/YYYY"
  minDate={2016-01-01T00:00:00.000Z}
  onChange={[Function]}
  value={2016-01-01T00:00:00.000Z}
/>
`;
